--- a/core/utilities/advancedrename/parser/options/sequencenumberoptiondialogwidget.ui
+++ b/core/utilities/advancedrename/parser/options/sequencenumberoptiondialogwidget.ui
@@ -114,6 +114,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QRadioButton" name="randomAware">
+     <property name="text">
+      <string>Random text aware numbering</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
